# PeerConnect

./: .gitignore  LICENSE  README.md  install.sh  loo  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  main.yml  setup-build.yaml
configs/: basic_config.ini  log_config.json  log_config311.json
configs/profiles/: default_profile.ini
docs/: LOGGING.md  README.md  app.md  guide.md
docs/avails/: README.md  bases.md  connect.md  constants.md  container.md  dialogs.md  events.md  exceptions.md  mixins.md  remotepeer.md  useables.md  waiters.md  wire.md
docs/conduit/: README.md  handledata.md  handleprofiles.md  handlesignals.md  pagehandle.md  webpage.md
docs/configurations/: README.md
docs/core/: README.md  acceptor.md  bandwidth.md  connectivity.md  connector.md  connectserver.md  discover.md  gossip.md  handles.md  kademlia.md  peers.md  public.md  requests.md
docs/finalize/: README.md
docs/managers/: README.md  directory.md  file.md  log.md  message.md  process.md  profiles.md  state.md
docs/startup/: README.md
docs/transfer/: README.md  bigfile.md  directory.md  file.md  otm.md
src/: __main__.py
src/avails/: _conn.py  _netproto.py  connect.py  constants.py  container.py  exceptions.py  mixins.py  remotepeer.py  useables.py  waiters.py  wire.py
src/conduit/: handledata.py  (+5 more)
src_docs/: LOGGING.md  README.md  app.md  contributing.md  guide.md
tests/: connections.py  file.py  gossip.py  message.py  otmfiles.py  peers.py  test.py
webpage/: index.html
(+91 files in other folders)
