[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "peerconnect"
version = "0.1.0"
description = "Peer-to-peer content transfer application"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { text = "MIT" }
dependencies = [
    "kademlia",
    "rpcudp",
    "tqdm",
    "websockets",
    "umsgpack",
]

requires-python = ">=3.11"
[tool.setuptools]
package-dir = { "" = "src" }  # Ensures all submodules stay under src in site-packages

[tool.setuptools.packages.find]
where = ["src"]  # Only include packages under src



# 🎯 Run as: python3 -m src
[project.scripts]
peerconnect = "src.__main__:run_application"

